command to generate datapack