@@ -16,10 +16,10 @@ import ovh.corail.woodcutter.registry.ModRecipeTypes;
 import ovh.corail.woodcutter.registry.ModTabs;
 
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static ovh.corail.woodcutter.WoodCutterMod.MOD_ID;
 
+@SuppressWarnings("unused")
 @JeiPlugin
 public class IntegrationJEI implements IModPlugin {
     private static final ResourceLocation WOOD_RL = new ResourceLocation(MOD_ID, "woodcutting");
@@ -36,7 +36,7 @@ public class IntegrationJEI implements IModPlugin {
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        Optional.ofNullable(Minecraft.getInstance().level).ifPresent(w -> registration.addRecipes(w.getRecipeManager().byType(ModRecipeTypes.WOODCUTTING).values().stream().sorted(Helper.recipeComparator).collect(Collectors.toList()), WOOD_RL));
+        Optional.ofNullable(Minecraft.getInstance().level).ifPresent(w -> registration.addRecipes(w.getRecipeManager().byType(ModRecipeTypes.WOODCUTTING).values().stream().sorted(Helper.recipeComparator).toList(), WOOD_RL));
     }
 
     @Override
